<resources>
    <string name="app_name">Android_sqlite</string>

    <string name="titulo">Nuevo usuarios</string>

    <string name="hint_nom">Ingrese nombres</string>
    <string name="hint_ape">Ingrese apellidos</string>
    <string name="hint_mail">Ingrese email</string>
    <string name="hint_clave">Ingrese clave</string>

    <string name="btn">Registrar</string>

    <string name="tituloCat">Nueva categoría</string>
    <string name="hint_cat">Nombre de la categoría</string>

    <string name="tituloProd">Nuevo producto</string>
    <string name="hint_nom_prod">Nombre del producto</string>
    <string name="hint_mar_prod">Marca del producto</string>
    <string name="hint_mod_prod">Modelo del producto</string>
    <string name="hint_pre_prod">Precio del producto</string>
    <string name="hint_sto_prod">Stock del producto</string>

    <string name="tituloLogin">Inicia sesión</string>
    <string name="btnLogin">LOG IN</string>
    <string name="btnRegiser">REGISTRATE</string>
    <string name="lblLogin">¿No estas registrado?</string>

    <string name="cantidadProductos">Seleccione la cantidad</string>
    <string name="btnCarro">Agregar al carrito</string>


    <string name="texto_descripcion">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</string>

    <string name="btnPagar">Pagar</string>


</resources>